--- a/Mission-8/Views/Shared/_Layout.cshtml
+++ b/Mission-8/Views/Shared/_Layout.cshtml
@@ -23,13 +23,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Quadrant View</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quadrant">Quadrant View</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Add Task</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddEditTask">Add Task</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Edit Task</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddEditTask">Edit Task</a>
                         </li>
                     </ul>
                 </div>
@@ -44,7 +44,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - Mission_8 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - Mission_8
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
