--- a/Mission-8/Views/Home/Quadrants.cshtml
+++ b/Mission-8/Views/Home/Quadrants.cshtml
@@ -4,15 +4,76 @@
     Layout = null;
 }
 
-<!DOCTYPE html>
+<div class="container">
+    <div class="row">
+        <!-- Quadrant 1 -->
+        <div class="col-md-6 border p-3">
+            <h3 class="text-danger">Quadrant 1 (Important/Urgent)</h3>
+            <ul class="list-group">
+                @foreach (var task in Model.Where(t => t.Quadrant == 1))
+                {
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <span>@task.Name - Due: @(task.DueDate?.ToShortDateString() ?? "No Due Date")</span>
+                        <span>
+                            <a href="@Url.Action("Edit", "Task", new { id = task.Id })" class="btn btn-primary btn-sm">Edit</a>
+                            <a href="@Url.Action("Delete", "Task", new { id = task.Id })" class="btn btn-danger btn-sm">Delete</a>
+                        </span>
+                    </li>
+                }
+            </ul>
+        </div>
 
-<html>
-<head>
-    <title>title</title>
-</head>
-<body>
-<div>
-      
+        <!-- Quadrant 2 -->
+        <div class="col-md-6 border p-3">
+            <h3 class="text-success">Quadrant 2 (Important/Not Urgent)</h3>
+            <ul class="list-group">
+                @foreach (var task in Model.Where(t => t.Quadrant == 2))
+                {
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <span>@task.Name - Due: @(task.DueDate?.ToShortDateString() ?? "No Due Date")</span>
+                        <span>
+                            <a href="@Url.Action("Edit", "Task", new { id = task.Id })" class="btn btn-primary btn-sm">Edit</a>
+                            <a href="@Url.Action("Delete", "Task", new { id = task.Id })" class="btn btn-danger btn-sm">Delete</a>
+                        </span>
+                    </li>
+                }
+            </ul>
+        </div>
+    </div>
+
+    <div class="row mt-3">
+        <!-- Quadrant 3 -->
+        <div class="col-md-6 border p-3">
+            <h3 class="text-warning">Quadrant 3 (Not Important/Urgent)</h3>
+            <ul class="list-group">
+                @foreach (var task in Model.Where(t => t.Quadrant == 3))
+                {
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <span>@task.Name - Due: @(task.DueDate?.ToShortDateString() ?? "No Due Date")</span>
+                        <span>
+                            <a href="@Url.Action("Edit", "Task", new { id = task.Id })" class="btn btn-primary btn-sm">Edit</a>
+                            <a href="@Url.Action("Delete", "Task", new { id = task.Id })" class="btn btn-danger btn-sm">Delete</a>
+                        </span>
+                    </li>
+                }
+            </ul>
+        </div>
+
+        <!-- Quadrant 4 -->
+        <div class="col-md-6 border p-3">
+            <h3 class="text-secondary">Quadrant 4 (Not Important/Not Urgent)</h3>
+            <ul class="list-group">
+                @foreach (var task in Model.Where(t => t.Quadrant == 4))
+                {
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <span>@task.Name - Due: @(task.DueDate?.ToShortDateString() ?? "No Due Date")</span>
+                        <span>
+                            <a href="@Url.Action("Edit", "Task", new { id = task.Id })" class="btn btn-primary btn-sm">Edit</a>
+                            <a href="@Url.Action("Delete", "Task", new { id = task.Id })" class="btn btn-danger btn-sm">Delete</a>
+                        </span>
+                    </li>
+                }
+            </ul>
+        </div>
+    </div>
 </div>
-</body>
-</html>
