--- a/Mission-8/Views/Home/Quadrants.cshtml
+++ b/Mission-8/Views/Home/Quadrants.cshtml
@@ -4,13 +4,72 @@
     Layout = null;
 }
 
-<h2>Task Quadrants</h2>
+@model List<TaskModel> 
 
-@if (Model == null || !Model.Any())
-{
-    <p>No tasks available.</p>
-}
-else
-{
-    <p>Tasks found: @Model.Count</p>
-}
+<div class="container">
+    <h2 class="text-center">Task Quadrants</h2>
+
+    <div class="row">
+        <!-- Quadrant 1 (Important & Urgent) -->
+        <div class="col-md-6">
+            <h3>Quadrant 1 (Important & Urgent)</h3>
+            <ul>
+                @foreach (var task in Model.Where(t => t.Quadrant == "1"))
+                {
+                    <li>
+                        @task.TaskName - Due: @task.DueDate
+                        <a href="/Tasks/Edit/@task.TaskId">Edit</a> |
+                        <a href="/Tasks/Delete/@task.TaskId">Delete</a>
+                    </li>
+                }
+            </ul>
+        </div>
+
+        <!-- Quadrant 2 (Important & Not Urgent) -->
+        <div class="col-md-6">
+            <h3>Quadrant 2 (Important & Not Urgent)</h3>
+            <ul>
+                @foreach (var task in Model.Where(t => t.Quadrant == "2"))
+                {
+                    <li>
+                        @task.TaskName - Due: @task.DueDate
+                        <a href="/Tasks/Edit/@task.TaskId">Edit</a> |
+                        <a href="/Tasks/Delete/@task.TaskId">Delete</a>
+                    </li>
+                }
+            </ul>
+        </div>
+    </div>
+
+    <div class="row">
+        <!-- Quadrant 3 (Not Important & Urgent) -->
+        <div class="col-md-6">
+            <h3>Quadrant 3 (Not Important & Urgent)</h3>
+            <ul>
+                @foreach (var task in Model.Where(t => t.Quadrant == "3"))
+                {
+                    <li>
+                        @task.TaskName - Due: @task.DueDate
+                        <a href="/Tasks/Edit/@task.TaskId">Edit</a> |
+                        <a href="/Tasks/Delete/@task.TaskId">Delete</a>
+                    </li>
+                }
+            </ul>
+        </div>
+
+        <!-- Quadrant 4 (Not Important & Not Urgent) -->
+        <div class="col-md-6">
+            <h3>Quadrant 4 (Not Important & Not Urgent)</h3>
+            <ul>
+                @foreach (var task in Model.Where(t => t.Quadrant == "4"))
+                {
+                    <li>
+                        @task.TaskName - Due: @task.DueDate
+                        <a href="/Tasks/Edit/@task.TaskId">Edit</a> |
+                        <a href="/Tasks/Delete/@task.TaskId">Delete</a>
+                    </li>
+                }
+            </ul>
+        </div>
+    </div>
+</div>
