--- a/Mission-8/Views/Home/AddEditTask.cshtml
+++ b/Mission-8/Views/Home/AddEditTask.cshtml
@@ -24,10 +24,10 @@
     <div class="form-group">
         <label asp-for="Quadrant"></label>
         <select asp-for="Quadrant" class="form-control">
-            <option value="I">Quadrant I - Important / Urgent</option>
-            <option value="II">Quadrant II - Important / Not Urgent</option>
-            <option value="III">Quadrant III - Not Important / Urgent</option>
-            <option value="IV">Quadrant IV - Not Important / Not Urgent</option>
+            <option value="1">Quadrant I - Important / Urgent</option>
+            <option value="2">Quadrant II - Important / Not Urgent</option>
+            <option value="3">Quadrant III - Not Important / Urgent</option>
+            <option value="4">Quadrant IV - Not Important / Not Urgent</option>
         </select>
         <span class="text-danger" asp-validation-for="Quadrant"></span>
     </div>
