--- a/Mission-8/Views/Home/Quadrants.cshtml
+++ b/Mission-8/Views/Home/Quadrants.cshtml
@@ -8,7 +8,7 @@
         <div class="col-md-6">
             <h3>Quadrant 1 (Important & Urgent)</h3>
             <ul>
-                @foreach (var task in Model.Where(t => t.Quadrant == "1"))
+                @foreach (var task in Model.Where(task => task.Quadrant == "1"))
                 {
                     <li>
                         @task.TaskName - Due: @task.DueDate
