--- a/Mission-8/Views/Shared/_Layout.cshtml
+++ b/Mission-8/Views/Shared/_Layout.cshtml
@@ -26,10 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quadrants">Quadrant View</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddEditTask">Add Task</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddEditTask">Edit Task</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddEditTask">Add/Edit Task</a>
                         </li>
                     </ul>
                 </div>
